# fastapi-coral-typescript

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.devcontainer.yml  docker-compose.yml  openapi.json  setup.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: backend-lint.yml  backend-typecheck.yml  frontend-typecheck.yml  openapi-drift.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: errors.py  logging.py  middleware.py
backend/app/models/: user.py
backend/app/repositories/: user_repo.py
backend/app/routers/: users.py
backend/app/schemas/: user.py
backend/app/services/: user_service.py
backend/migrations/: env.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py
backend/tests/routers/: test_users.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/api/services/: index.ts
frontend/src/api/types/: index.ts
frontend/src/components/: UserList.tsx
frontend/src/hooks/: useUsers.ts
frontend/src/pages/: UsersPage.tsx
scripts/: generate.sh
