[project]
name = "my-app-backend"
version = "0.1.0"
description = "FastAPI backend for my-app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.5.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
